fixed: movie covers

--- a/css/main.css
+++ b/css/main.css
@@ -159,12 +159,47 @@ button {
 }
 
 .movie-selection div {
-    background: url(https://i.pinimg.com/originals/35/5d/65/355d65da2e1dc28b3399951765bc5fb1.jpg);
-    background-size: cover;
     width: 100%;
     height: 160px;
     margin: 0.3%;
 }
+/* ------movie backgrounds-------- */
+.movie1{
+    background: url(https://www.movieartarena.com/imgs/2fasthz.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.movie2{
+    background: url(http://comicsagogo.files.wordpress.com/2011/11/tintin-movie-poster-horizontal.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.movie3{
+    background: url(https://i.pinimg.com/originals/35/5d/65/355d65da2e1dc28b3399951765bc5fb1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.movie4{
+    background: url(http://www.weedist.com/wp-content/uploads/2015/05/Great-Movies-While-High-Mad-Max-Fury-Road-Weedist.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.movie5{
+    background: url(https://i.pinimg.com/originals/35/5d/65/355d65da2e1dc28b3399951765bc5fb1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+.movies1{
+    background: url(https://i.pinimg.com/originals/35/5d/65/355d65da2e1dc28b3399951765bc5fb1.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
 
 
 /* ------- Styling footer -------- */
